# gimp-palette-quantize

./: .gitignore  .gitlab-ci.yml  BUILDING-windows.md  BUILDING.md  DEVELOPMENT.md  README.md  build-install-flatpak.sh  build-install-msys2.sh  install-linux-user.sh  meson.build
.github/workflows/: ci.yml  release.yml
src/: gegl-palette-quantize.c  gimp-palette-quantize.c  meson.build
